--- a/Project.toml
+++ b/Project.toml
@@ -14,9 +14,9 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-CategoricalArrays = "0.10.0, 1.0"
-DataFrames = "1.6.0, 2.0"
-Distributions = "0.24.0, 1.0"
-FixedEffectModels = "1.10.0, 2.0"
-Statistics = "1.10.0, 2.0"
-julia = "1.6.0, 2.0"
+CategoricalArrays = "0.1.0 - 1.0"
+DataFrames = "1.1.0 - 2.0"
+Distributions = "0.1.0 - 1.0"
+FixedEffectModels = "1.1.0 - 2.0"
+Statistics = "1.1.0 - 2.0"
+julia = "1.6.0 - 2.0"
